tests/macro-tests/cases/widget_new/missing_semi2.stderr
error: expected `;`
  --> cases/widget_new/missing_semi2.rs:15:9
   |
15 |         enabled = true;
   |         ^^^^^^^
